--- a/index.html
+++ b/index.html
@@ -109,13 +109,93 @@
             </div>
         </div>
     </div>
-    <!-- SLIDE UN CANTAINER GOSHMALY -->
     <!-- 3 section -->
-    <div class="container-xxl py-5 text-white" data-aos="fade-up" data-aos-duration="2000">
+    <!-- md -->
+    <div class="container-xxl py-3 text-center d-none d-md-block">
+        <div class="row justify-content-center">
+            <div class="col-10 bg-white border">
+                <div class="h4 text-black fw-semibold text-uppercase pt-5 pb-2" data-aos="fade-up"
+                    data-aos-duration="2000">
+                    about us
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-9 col-12 small text-dark " data-aos="fade-up" data-aos-duration="2000">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ullam consequuntur, fuga
+                        perspiciatis obcaecati distinctio recusandae natus quam soluta velit, sequi, voluptatum
+                        facere.
+                    </div>
+                </div>
+                <div class="splide py-5" id="slide" role="group" aria-label="Splide" data-aos="fade-up"
+                    data-aos-duration="2000">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide">
+                                <div>
+                                    <img src="img/female-avatar.png" alt="" class="w-100 img-fluid">
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div>
+                                    <img src="img/newsletter.png" alt="" class="w-100 img-fluid">
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div>
+                                    <img src="img/working-girl.png" alt="" class="w-100 img-fluid">
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- mb -->
+    <div class="container-xxl py-3 text-center d-block d-md-none">
+        <div class="row justify-content-center">
+            <div class="col-10 bg-white border">
+                <div class="h4 text-black fw-semibold text-uppercase pt-5 pb-2" data-aos="fade-up"
+                    data-aos-duration="2000">
+                    about us
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-9 col-12 small text-dark " data-aos="fade-up" data-aos-duration="2000">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ullam consequuntur, fuga
+                        perspiciatis obcaecati distinctio recusandae natus quam soluta velit, sequi, voluptatum
+                        facere.
+                    </div>
+                </div>
+                <div class="splide py-5" id="second-slider" role="group" aria-label="Splide" data-aos="fade-up"
+                    data-aos-duration="2000">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide">
+                                <div>
+                                    <img src="img/female-avatar.png" alt="" class="w-100 img-fluid">
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div>
+                                    <img src="img/newsletter.png" alt="" class="w-100 img-fluid">
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div>
+                                    <img src="img/working-girl.png" alt="" class="w-100 img-fluid">
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 4 section -->
+    <div class="container-xxl py-5 text-white">
         <div class="row justify-content-center">
             <div class="col-10">
                 <div class="row">
-                    <div class="col-md-6 col-12 bg-orange py-5">
+                    <div class="col-md-6 col-12 bg-orange py-5"  data-aos="fade-up" data-aos-duration="2000">
                         <div class="h4 fw-semibold text-uppercase pt-5 pb-2 ps-10">
                             web design
                         </div>
@@ -130,14 +210,14 @@
                             ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, id?
                         </div>
                     </div>
-                    <div class="col-md col-12 ps-md-20 ps-5 py-md-0 py-5">
+                    <div class="col-md col-12 ps-md-20 ps-5 py-md-0 py-5"  data-aos="fade-up" data-aos-duration="2000">
                         <img src="img/about-img.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- 4 section -->
+    <!-- 5 section -->
     <!-- md -->
     <div class="container-xxl text-center py-3 header-margin-bottom d-none d-md-block">
         <div class="row justify-content-center">
@@ -153,7 +233,8 @@
                         facere.
                     </div>
                 </div>
-                <div class="splide" id="splide" role="group" aria-label="Splide" data-aos="fade-up" data-aos-duration="2000">
+                <div class="splide" id="splide" role="group" aria-label="Splide" data-aos="fade-up"
+                    data-aos-duration="2000">
                     <div class="splide__track">
                         <ul class="splide__list">
                             <li class="splide__slide">
@@ -175,7 +256,8 @@
                                                 <div class="row justify-content-center pb-5">
                                                     <div class="col-10">
                                                         <div class="small">
-                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum natus, voluptate
+                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Ipsum natus, voluptate
                                                             nostrum
                                                             veniam aut veritatis vitae dicta. Est ipsum.
                                                         </div>
@@ -205,7 +287,8 @@
                                                 <div class="row justify-content-center pb-5">
                                                     <div class="col-10">
                                                         <div class="small">
-                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum natus, voluptate
+                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Ipsum natus, voluptate
                                                             nostrum
                                                             veniam aut veritatis vitae dicta. Est ipsum.
                                                         </div>
@@ -235,7 +318,8 @@
                                                 <div class="row justify-content-center pb-5">
                                                     <div class="col-10">
                                                         <div class="small">
-                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum natus, voluptate
+                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Ipsum natus, voluptate
                                                             nostrum
                                                             veniam aut veritatis vitae dicta. Est ipsum.
                                                         </div>
@@ -265,7 +349,8 @@
                                                 <div class="row justify-content-center pb-5">
                                                     <div class="col-10">
                                                         <div class="small">
-                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum natus, voluptate
+                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Ipsum natus, voluptate
                                                             nostrum
                                                             veniam aut veritatis vitae dicta. Est ipsum.
                                                         </div>
@@ -282,7 +367,7 @@
             </div>
         </div>
     </div>
-    <!-- mobile -->
+    <!-- mb -->
     <div class="container-xxl text-center py-3 header-margin-bottom d-block d-md-none">
         <div class="row justify-content-center">
             <div class="col-10 bg-white border">
@@ -297,7 +382,8 @@
                         facere.
                     </div>
                 </div>
-                <div class="splide" id="second-slider" role="group" aria-label="Splide" data-aos="fade-up" data-aos-duration="2000">
+                <div class="splide" id="second-slider" role="group" aria-label="Splide" data-aos="fade-up"
+                    data-aos-duration="2000">
                     <div class="splide__track">
                         <ul class="splide__list">
                             <li class="splide__slide">
@@ -319,7 +405,8 @@
                                                 <div class="row justify-content-center pb-5">
                                                     <div class="col-10">
                                                         <div class="small">
-                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum natus, voluptate
+                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Ipsum natus, voluptate
                                                             nostrum
                                                             veniam aut veritatis vitae dicta. Est ipsum.
                                                         </div>
@@ -349,7 +436,8 @@
                                                 <div class="row justify-content-center pb-5">
                                                     <div class="col-10">
                                                         <div class="small">
-                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum natus, voluptate
+                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Ipsum natus, voluptate
                                                             nostrum
                                                             veniam aut veritatis vitae dicta. Est ipsum.
                                                         </div>
@@ -379,7 +467,8 @@
                                                 <div class="row justify-content-center pb-5">
                                                     <div class="col-10">
                                                         <div class="small">
-                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum natus, voluptate
+                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Ipsum natus, voluptate
                                                             nostrum
                                                             veniam aut veritatis vitae dicta. Est ipsum.
                                                         </div>
@@ -409,7 +498,8 @@
                                                 <div class="row justify-content-center pb-5">
                                                     <div class="col-10">
                                                         <div class="small">
-                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum natus, voluptate
+                                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Ipsum natus, voluptate
                                                             nostrum
                                                             veniam aut veritatis vitae dicta. Est ipsum.
                                                         </div>
@@ -426,7 +516,7 @@
             </div>
         </div>
     </div>
-    <!-- 5 section -->
+    <!-- 6 section -->
     <div class="bg-light">
         <div class="container-xxl py-5 text-black" data-aos="fade-up" data-aos-duration="2000">
             <div class="row justify-content-center">
@@ -503,7 +593,7 @@
             </div>
         </div>
     </div>
-    <!-- 6 section -->
+    <!-- 7 section -->
     <div class="bg-white">
         <div class="container-xxl py-4">
             <div class="row justify-content-center">
@@ -565,6 +655,7 @@
             });
             splide.mount();
         });
+
     </script>
     <script src="assets/js/fancybox.umd.js"></script>
     <script>
