--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/icons/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/icons/fonts/bootstrap-icons.woff">
     <link rel="stylesheet" href="css/bootstrap-icons.min.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
